# zkBlackjack

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/src/: eth.rs  lib.rs  r0.rs  sm.rs  web.rs
apps/: Cargo.toml
contracts/: ImageID.sol  ZkBlackjack.sol
frontend/: bun.lockb  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Card.tsx
frontend/src/structs/: game.ts
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/src/: lib.rs
script/: Deploy.s.sol
tests/: ZkBlackjack.t.sol
