[workspace]
resolver = "2"
members = ["app", "methods"]
exclude = ["lib"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
alloy-primitives = { version = "0.7.7", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.7.7" }
anyhow = { version = "1.0" }
bincode = { version = "1.3" }
bytemuck = { version = "1.16" }
ethers = { version = "2.0" }
hex = { version = "0.4" }
log = { version = "0.4" }
methods = { path = "./methods" }
risc0-build = { version = "1.0", features = ["docker"] }
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.0.0" }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.0.0" }
risc0-zkvm = { version = "1.0", default-features = false }
risc0-zkp = { version = "1.0", default-features = false }
serde = { version = "1.0", features = ["derive", "std"] }
k256 = { version = "0.13", features = ["ecdsa"] }
rand = { version = "0.8", features = ["std"] }
axum = { version = "0.7", features = [] }
serde_json = { version = "1.0" }
rand_chacha = "0.3.1"

[profile.release]
debug = 1
lto = true
