[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blackjack"
path = "src/bin/blackjack.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "0.7.7", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.7.7" }
risc0-zkvm = { version = "1.0", default-features = false, features = ['std'] }

[profile.release]
lto = "thin"
