[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blackjack"
path = "src/bin/blackjack.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "0.7.7", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.7.7" }
risc0-zkvm = { version = "1.0", default-features = false, features = ['std'] }
rand = "0.8.5"
rand_chacha = "0.3.1"
k256 = { version = "=0.13.1", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa"], default_features = false }
sha2 = { version = "=0.10.6", features = ["std", "asm"], default-features = false }

[patch.crates-io]
# Placing these patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 and bigint
# multiplication accelerator support for all downstream usages of the following crates.
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.1-risczero.1"  }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0" }

[profile.release]
lto = "thin"
